--- a/stepslibrary-domain/pom.xml
+++ b/stepslibrary-domain/pom.xml
@@ -60,5 +60,11 @@
             <artifactId>spring-data-jpa</artifactId>
             <version>2.3.4.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>5.4.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
